--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "devDependencies": {
     "awesome-typescript-loader": "^0.13.1",
     "html-webpack-plugin": "^1.6.1",
+    "open-url": "^2.0.2",
+    "rimraf": "^2.4.3",
     "typescript": "^1.5.3",
-    "webpack": "^1.12.1"
+    "webpack": "^1.12.1",
+    "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
+    "initialize": "npm install && tsd install",
     "preproduction": "rimraf build",
-    "production": "webpack --config webpack/webpack.production.config.js --progress --colors"
+    "production": "webpack --config webpack/webpack.production.config.js --progress --colors",
+    "prestart": "open-url http://localhost:8080/index.html",
+    "start": "webpack-dev-server --config webpack/webpack.development.config.js --progress --colors --hot"
   },
   "author": "",
   "license": "ISC",
