--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "open-url": "^2.0.2",
     "replace": "^0.3.0",
     "rimraf": "^2.4.3",
+    "tslint-loader": "^1.0.1",
     "typescript": "^1.5.3",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
